Compatibility with Django 1.9+

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 *.py[co]
+
+/build/lib/dialogos/__init__.py
+/build/lib/dialogos/admin.py
+/build/lib/dialogos/authorization.py
+/build/lib/dialogos/forms.py
+/build/lib/dialogos/migrations/__init__.py
+/build/lib/dialogos/migrations/0001_initial.py
+/build/lib/dialogos/models.py
+/build/lib/dialogos/signals.py
+/build/lib/dialogos/templatetags/__init__.py
+/build/lib/dialogos/templatetags/dialogos_tags.py
+/build/lib/dialogos/tests.py
+/build/lib/dialogos/urls.py
+/build/lib/dialogos/views.py
+/dist/geonode-dialogos-0.8.tar.gz
+/dist/geonode-dialogos-0.8.win-amd64.tar.gz
+/dist/geonode-dialogos-0.8.zip
+/MANIFEST
