--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,14 @@
+[options]
+packages = find:
+include_package_data = True
+zip_safe = False
+
+[options.packages.find]
+exclude = tests
+
+[bdist_wheel]
+universal = 1
+
 [build_sphinx]
 source-dir = docs/
 build-dir = docs/_build
